# zenml-patterns

./: .gitignore  Dockerfile  README.md  debug_imports.py  settings.ini
docker-local-pkg/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
docker-local-pkg/src/demo/: training.py
docker-local-pkg/src/demo/pipelines/: training_pipeline.py
docker-local-pkg/src/demo/steps/: training_step.py
src/demo/: training.py
src/demo/pipelines/: training_pipeline.py
src/demo/steps/: training_step.py
trigger-multiple-templates/: README.md  main.py  pipeline.py  requirements.txt
