[project]
name = "demo"
version = "0.0.1"
description = "Demo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas",  "zenml"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/demo"]

[project.scripts]
training-pipeline = "demo.pipelines.training_pipeline:main"

[tool.uv]
dev-dependencies = [
    "pip>=25.0.1",
]


